# -django-REST

./: .env.prod  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
users/: urls.py
users/management/commands/: csu.py  load_payments.py
users/migrations/: 0001_initial.py
vehicle/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
vehicle/migrations/: 0001_initial.py  0002_moto.py  0003_milage.py  0004_alter_milage_car.py  0005_alter_milage_moto.py  0006_car_owner_moto_owner.py
